fix missing line, improve text readability

--- a/contrastmodes.css
+++ b/contrastmodes.css
@@ -1,3 +1,7 @@
+ p {
+    font-size: 125%;
+ }
+ 
  body {
     color: #222;
     background: #fff;
